add_subdirectory(grid)
add_subdirectory(constants)
add_subdirectory(containers)
add_subdirectory(quadrature)
add_subdirectory(polynomial)
add_subdirectory(io)
add_subdirectory(functions)
add_subdirectory(solvers)
add_subdirectory(equations)
add_subdirectory(boundary_conditions)
#add_subdirectory(tools)
