add_subdirectory(chidg_cache)

add_lib_sources(
                type_densematrix.f90
                type_densematrix_vector.f90 
                type_densevector.f90 
                type_blockmatrix.f90 
                type_blockvector.f90 
                type_dict.f90
                operator_block_mv.f90
                operator_block_dot.f90
                type_rvector.f90
                type_ivector.f90
                type_mvector.f90
                type_pvector.f90
                type_evector.f90
                type_bcvector.f90
                type_ovector.f90
                type_fcnvector.f90
                type_svector.f90
                #type_vector.f90
                type_chidgMatrix.f90
                type_chidgVector.f90
                type_chidgVector_send.f90
                type_chidgVector_recv.f90
                type_chidgVector_send_comm.f90
                type_chidgVector_recv_comm.f90
                operator_chidg_dot.f90
                operator_chidg_mv.f90
                type_solverdata.f90
                type_element_info.f90
                type_face_info.f90
                type_function_info.f90
                type_function_status.f90
                type_function_status_data.f90
                )

