add_subdirectory(chidg_cache)
add_subdirectory(functional_cache)


add_lib_sources(
                type_densematrix.f90
                type_densematrix_vector.f90 
                type_densevector.f90 
                type_domain_matrix.f90 
                type_domain_vector.f90 
                type_dict.f90
                operator_domain_dot.f90
                type_rvector.f90
                type_ivector.f90
                type_mmvector.f90
                type_mvector.f90
                type_pvector.f90
                type_evector.f90
                type_nvector.f90
                type_bcvector.f90
                type_pmmfvector.f90
                type_ovector.f90
                type_fcnvector.f90
                type_fclvector.f90
                type_mpi_request_vector.f90
                type_svector.f90
                type_tivector.f90
                type_chidg_matrix.f90
                type_chidg_vector.f90
                type_chidg_vector_send.f90
                type_chidg_vector_recv.f90
                type_chidg_vector_send_comm.f90
                type_chidg_vector_recv_comm.f90
                operator_chidg_dot.f90
                operator_chidg_mv.f90
                type_solverdata.f90
                type_element_info.f90
                type_face_info.f90
                type_edge_info.f90
                type_function_info.f90
                type_function_status.f90
                type_function_status_data.f90
                type_r3.f90
                type_r3vector.f90
                type_rbfvector.f90
                type_rbf_mm_driver_vector.f90
                type_rbf_node_vector.f90
                type_rbf_source_vector.f90
                type_petsc_vector_wrapper.f90
                type_petsc_matrix_wrapper.f90
                type_petsc_scatter_wrapper.f90
                type_petsc_is_wrapper.f90
                # Adjoint
                type_chidg_adjoint.f90
                type_chidg_adjointx.f90
                type_chidg_adjointbc.f90
                type_chidg_functional.f90
                type_storage_flags.f90

                )

